<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kotlinbasics2</string>
    <string name="eredmeny">Result:-</string>
    <string name="greetingButton">Open greeting</string>
    <string name="calclatorButton">Open calculator</string>
    <string name="weatherButton">Open weather</string>
    <string name="nameHint">Type your name</string>
    <string name="search">Search</string>
    <string name="greeting">Hello!</string>
    <string name="delete">Delete</string>
    <string name="szum">Addition</string>
    <string name="firstNum">First Number</string>
    <string name="secNum">Second Number</string>
    <string name="cityName">City name</string>
    <string name="toastText">Please fill all the fildes</string>
    <string name="welcome">Welcome</string>
    <string name="shortName">but you have a short name</string>
    <string name="longName">but you have a long name</string>
    <string name="toastText2">Please type your name</string>
    <string name="temperature">Temparature</string>
    <string name="feel">Feel</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="usersListText">Users list</string>
    <string name="examleEmail">email@example.com</string>
    <string name="name">Name</string>
    <string name="userListButton">Open users list</string>
    <string name="country">Country</string>
    <string name="randomUser">Random User List</string>
    <string name="openRuserlist">Open Random User List</string>
    <string name="toCount">Class size</string>
    <string name="colorList">Color List</string>
    <string name="placeholder">PLACEHOLDER</string>
</resources>