<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    style="@style/Base.Theme.Kotlinbasics2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:src="@android:drawable/ic_dialog_dialer"/>

    <EditText
        android:id="@+id/elsoSzamEditText"
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:hint="@string/firstNum"
        style="@style/EditTextStyle"/>
    <EditText
        android:id="@+id/masodikSzamEditText"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:hint="@string/secNum"
        style="@style/EditTextStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/osszeadasButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/szum"
            android:layout_marginEnd="4dp"
            style="@style/ButtonStyle"/>

        <Button
            android:id="@+id/torlesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginStart="4dp"
            style="@style/ButtonStyle"/>
    </LinearLayout>
    <TextView
        android:id="@+id/eredmenyTextView"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eredmeny"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

</LinearLayout>