<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listItem"
    style="@style/ListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/profileImageView"
        style="@style/ListItem"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="Profilekép"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_compass" />

    <LinearLayout
        style="@style/ListItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/ListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/ListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examleEmail"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/countryTextView"
            style="@style/ListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/country"
            android:textColor="@color/gray"
            android:textSize="14sp" />


    </LinearLayout>


</LinearLayout>